modified:   13. Strings and Text Processing/Comparing Strings.ipynb

--- a/13. Strings and Text Processing/Comparing Strings.ipynb
+++ b/13. Strings and Text Processing/Comparing Strings.ipynb
@@ -897,7 +897,7 @@
     }
    },
    "source": [
-    "If we have to compare the strings lexicographically, but also **ignore the case**, then we could either of the following: \n",
+    "If we have to compare the strings lexicographically, but also **ignore the case**, then we could either use of the following: \n",
     "- `string.Compare(string strA, string strB, bool ignoreCase)` \n",
     "- `string.Compare(string strA, string strB, StringComparison.CurrentCultureIgnoreCase)` . \n",
     "      \n",
