modified:   13. Strings and Text Processing/Comparing Strings.ipynb

--- a/13. Strings and Text Processing/Comparing Strings.ipynb
+++ b/13. Strings and Text Processing/Comparing Strings.ipynb
@@ -901,7 +901,7 @@
     "- `string.Compare(string strA, string strB, bool ignoreCase)` \n",
     "- `string.Compare(string strA, string strB, StringComparison.CurrentCultureIgnoreCase)` . \n",
     "      \n",
-    "This is an overload to a static method, included in the `string` class, which works in the same way as `CompareTo(…)`:"
+    "These are overloads to a static method, included in the `string` class, which works in the same way as `CompareTo(…)`:"
    ]
   },
   {
