modified:   13. Strings and Text Processing/Comparing Strings.ipynb

--- a/13. Strings and Text Processing/Comparing Strings.ipynb
+++ b/13. Strings and Text Processing/Comparing Strings.ipynb
@@ -961,7 +961,8 @@
     }
    ],
    "source": [
-    "// A horse is a Horse? OF COURSE, OF COURSE!\n",
+    "// A horse is a Horse? \n",
+    "// OF COURSE, OF COURSE!\n",
     "string.Compare(\"horse\", \"Horse\", true)"
    ]
   },
