modified:   13. Strings and Text Processing/The Anatomy of a String.ipynb

--- a/13. Strings and Text Processing/The Anatomy of a String.ipynb
+++ b/13. Strings and Text Processing/The Anatomy of a String.ipynb
@@ -852,10 +852,10 @@
     "<table style=\"background: white; color: black;\">\n",
     "    <thead>\n",
     "        <th style=\"border: 1px solid black;\">H</th>\n",
-    "        <th style=\"border: 1px solid black;\">E</th>\n",
-    "        <th style=\"border: 1px solid black;\">L</th>\n",
-    "        <th style=\"border: 1px solid black;\">L</th>\n",
-    "        <th style=\"border: 1px solid black;\">O</th>\n",
+    "        <th style=\"border: 1px solid black;\">e</th>\n",
+    "        <th style=\"border: 1px solid black;\">l</th>\n",
+    "        <th style=\"border: 1px solid black;\">l</th>\n",
+    "        <th style=\"border: 1px solid black;\">o</th>\n",
     "        <th style=\"border: 1px solid black;\">,</th>\n",
     "        <th style=\"border: 1px solid black;\"> </th>\n",
     "        <th style=\"border: 1px solid black;\">C</th>\n",
