--- a/13. Strings and Text Processing/Comparing Strings.ipynb
+++ b/13. Strings and Text Processing/Comparing Strings.ipynb
@@ -1146,7 +1146,37 @@
     }
    },
    "source": [
-    "The correctness of this rule is quite controversial as in the $Unicode$ table the capital letters are before the small ones. For example due to the standard $Unicode$, the letter $A$ has a code $65$, which is smaller than the code of the letter $a$  has code $97$."
+    "The correctness of this rule is quite controversial as in the $Unicode$ table the capital letters are before the small ones. For example, due to the standard $Unicode$, the letter $A$ has a code $65$, which is smaller than the code of the letter $a$, which is $97$."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Memory Optimization For `string`s"
    ]
   }
  ],
