modified:   13. Strings and Text Processing/Comparing Strings.ipynb

--- a/13. Strings and Text Processing/Comparing Strings.ipynb
+++ b/13. Strings and Text Processing/Comparing Strings.ipynb
@@ -897,7 +897,7 @@
     }
    },
    "source": [
-    "If we have to compare the strings lexicographically, but also **ignore the case**, then we could either use of the following: \n",
+    "If we have to compare the strings lexicographically, but also **ignore the case**, then we could use either of the following: \n",
     "- `string.Compare(string strA, string strB, bool ignoreCase)` \n",
     "- `string.Compare(string strA, string strB, StringComparison.CurrentCultureIgnoreCase)` . \n",
     "      \n",
@@ -1654,7 +1654,7 @@
    "source": [
     "Due to an optimization that occurs within the $CLR$, called **interning**, which **prevents the memory from creating duplicated strings**, if there are any existing `string` type objects in the heap, but a new variable in the stack later attempts to also store it as well, the new variable will be **redirected to point at the first object**, rather than to point at a new object with duplicate data.   \n",
     "   \n",
-    "The following figure illustrates what actually occurs subsequent to the declarations made above:"
+    "The following illustrates what actually occurs subsequent to the declarations made above:"
    ]
   },
   {
@@ -1670,6 +1670,66 @@
    },
    "source": [
     "<img src=\"_img/string_object_references4.jpg\" style=\"display: block; margin: auto;\"></img>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>True</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "string.Equals( word, sameWord )"
    ]
   }
  ],
