--- a/13. Strings and Text Processing/Manipulating Strings.ipynb
+++ b/13. Strings and Text Processing/Manipulating Strings.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "polyglot-notebook"
@@ -189,7 +189,7 @@
     {
      "data": {
       "text/plain": [
-       "Hello, User!"
+       "Hello, Hello, User!"
       ]
      },
      "metadata": {},
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "greet += subject"
+    "greet + (greet += subject)"
    ]
   }
  ],
@@ -212,19 +212,8 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [
-       "c#",
-       "C#"
-      ],
-      "languageName": "C#",
+      "aliases": [],
       "name": "csharp"
-     },
-     {
-      "aliases": [
-       "frontend"
-      ],
-      "languageName": null,
-      "name": "vscode"
      }
     ]
    }
