modified:   13. Strings and Text Processing/Manipulating Strings.ipynb

--- a/13. Strings and Text Processing/Manipulating Strings.ipynb
+++ b/13. Strings and Text Processing/Manipulating Strings.ipynb
@@ -31,7 +31,9 @@
    "source": [
     "Strings are **immutable**! \n",
     "   \n",
-    "Any change of a variable of the `string` type creates a **new** `string` in which the result is stored. Therefore, any operations that apply to a `string` will return, as a result, a **reference** to the result."
+    "Any change of a variable of the `string` type creates a **new** `string` in which the result is stored.   \n",
+    "   \n",
+    "Therefore, any operations that apply to a `string` will return a **reference** to the result."
    ]
   },
   {
@@ -76,7 +78,7 @@
     }
    },
    "source": [
-    "Suppose we have declared the following `string`s: "
+    "Suppose we have declared the following `string` types: "
    ]
   },
   {
@@ -126,7 +128,7 @@
     }
    },
    "source": [
-    "Gluing two strings together and obtaining a new one as a result is referred to as **concatenation**.   \n",
+    "Gluing two `string` types together and obtaining a new one as a result is referred to as **concatenation**.   \n",
     "\n",
     "It can be implemented be done in **three ways**: \n",
     "1. using the `string.Concat(…)` method  \n",
